--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 autopep8==1.6.0
 click==8.1.3
 joblib==1.1.0
+line-profiler==3.5.1
 nltk==3.7
 numpy==1.22.3
 pandas==1.4.2
@@ -9,5 +10,6 @@ python-dateutil==2.8.2
 pytz==2022.1
 regex==2022.4.24
 six==1.16.0
+tabulate==0.8.9
 toml==0.10.2
 tqdm==4.64.0
