--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,26 @@
 autopep8==1.6.0
 click==8.1.3
+cycler==0.11.0
+fonttools==4.33.3
 joblib==1.1.0
+kiwisolver==1.4.3
 line-profiler==3.5.1
+matplotlib==3.5.2
 nltk==3.7
 numpy==1.22.3
+packaging==21.3
 pandas==1.4.2
+Pillow==9.2.0
+plotly==5.9.0
 pycodestyle==2.8.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.1
 regex==2022.4.24
+scipy==1.8.1
+seaborn==0.11.2
 six==1.16.0
 tabulate==0.8.9
+tenacity==8.0.1
 toml==0.10.2
 tqdm==4.64.0
